get rid of bail out button

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -94,13 +94,13 @@
 				<tbody>
 					<tr>
 						<td>
-							<p id="trialnum"></p>
+							<!-- <p id="trialnum"></p> -->
 						</td>
 						<td>
 							<p id="question-wrapper">Do you think this one <span id="question">{{}}</span>??</p>
 						</td>
 						<td>
-							<p align="right"><button type="end" class="btn btn-default" id="bail" align="right">end</button></p>
+							<!-- <p align="right"><button type="end" class="btn btn-default" id="bail" align="right">end</button></p> -->
 						</td>
 					</tr>
 				</tbody>
