display 1 question if condition is animalCategorization, display 6 questions in random order if condition is propertyInference

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -86,7 +86,177 @@
 
 		<img />
 
-		<div>
+        <div class="control-group" id="question1">
+			<label for="question1"><p id="question-wrapperA">Do you think this one <span id="question1">{{}}</span>?</p></label>
+			<div class="controls">
+				<div class="radio">
+					<label class="radio" for="question1-0"><input type="radio" name="question1" id="question1-0" value="-3">Definitely no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question1-1"><input type="radio" name="question1" id="question1-1" value="-2">Probably no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question1-2"><input type="radio" name="question1" id="question1-2" value="-1">Maybe no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question1-3"><input type="radio" name="question1" id="question1-3" value="0">Equally likely yes/no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question1-4"><input type="radio" name="question1" id="question1-4" value="1">Maybe yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question1-5"><input type="radio" name="question1" id="question1-5" value="2">Probably yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question1-6"><input type="radio" name="question1" id="question1-6" value="3">Definitely yes</label>
+				</div>
+			</div>
+        </div>
+
+        <div class="control-group" id="question2">
+			<label for="question2"><p id="question-wrapperA">Do you think this one <span id="question2">{{}}</span>?</p></label>
+			<div class="controls">
+				<div class="radio">
+					<label class="radio" for="question2-0"><input type="radio" name="question2" id="question2-0" value="-3">Definitely no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question2-1"><input type="radio" name="question2" id="question2-1" value="-2">Probably no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question2-2"><input type="radio" name="question2" id="question2-2" value="-1">Maybe no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question2-3"><input type="radio" name="question2" id="question2-3" value="0">Equally likely yes/no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question2-4"><input type="radio" name="question2" id="question2-4" value="1">Maybe yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question2-5"><input type="radio" name="question2" id="question2-5" value="2">Probably yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question2-6"><input type="radio" name="question2" id="question2-6" value="3">Definitely yes</label>
+				</div>
+			</div>
+        </div>
+
+        <div class="control-group" id="question3">
+			<label for="question3"><p id="question-wrapperA">Do you think this one <span id="question3">{{}}</span>?</p></label>
+			<div class="controls">
+				<div class="radio">
+					<label class="radio" for="question3-0"><input type="radio" name="question3" id="question3-0" value="-3">Definitely no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question3-1"><input type="radio" name="question3" id="question3-1" value="-2">Probably no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question3-2"><input type="radio" name="question3" id="question3-2" value="-1">Maybe no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question3-3"><input type="radio" name="question3" id="question3-3" value="0">Equally likely yes/no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question3-4"><input type="radio" name="question3" id="question3-4" value="1">Maybe yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question3-5"><input type="radio" name="question3" id="question3-5" value="2">Probably yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question3-6"><input type="radio" name="question3" id="question3-6" value="3">Definitely yes</label>
+				</div>
+			</div>
+        </div>
+
+        <div class="control-group" id="question4">
+			<label for="question4"><p id="question-wrapperA">Do you think this one <span id="question4">{{}}</span>?</p></label>
+			<div class="controls">
+				<div class="radio">
+					<label class="radio" for="question4-0"><input type="radio" name="question4" id="question4-0" value="-3">Definitely no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question4-1"><input type="radio" name="question4" id="question4-1" value="-2">Probably no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question4-2"><input type="radio" name="question4" id="question4-2" value="-1">Maybe no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question4-3"><input type="radio" name="question4" id="question4-3" value="0">Equally likely yes/no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question4-4"><input type="radio" name="question4" id="question4-4" value="1">Maybe yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question4-5"><input type="radio" name="question4" id="question4-5" value="2">Probably yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question4-6"><input type="radio" name="question4" id="question4-6" value="3">Definitely yes</label>
+				</div>
+			</div>
+        </div>
+
+        <div class="control-group" id="question5">
+			<label for="question5"><p id="question-wrapperA">Do you think this one <span id="question5">{{}}</span>?</p></label>
+			<div class="controls">
+				<div class="radio">
+					<label class="radio" for="question5-0"><input type="radio" name="question5" id="question5-0" value="-3">Definitely no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question5-1"><input type="radio" name="question5" id="question5-1" value="-2">Probably no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question5-2"><input type="radio" name="question5" id="question5-2" value="-1">Maybe no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question5-3"><input type="radio" name="question5" id="question5-3" value="0">Equally likely yes/no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question5-4"><input type="radio" name="question5" id="question5-4" value="1">Maybe yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question5-5"><input type="radio" name="question5" id="question5-5" value="2">Probably yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question5-6"><input type="radio" name="question5" id="question5-6" value="3">Definitely yes</label>
+				</div>
+			</div>
+        </div>
+
+        <div class="control-group" id="question6">
+			<label for="question6"><p id="question-wrapperA">Do you think this one <span id="question6">{{}}</span>?</p></label>
+			<div class="controls">
+				<div class="radio">
+					<label class="radio" for="question6-0"><input type="radio" name="question6" id="question6-0" value="-3">Definitely no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question6-1"><input type="radio" name="question6" id="question6-1" value="-2">Probably no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question6-2"><input type="radio" name="question6" id="question6-2" value="-1">Maybe no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question6-3"><input type="radio" name="question6" id="question6-3" value="0">Equally likely yes/no</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question6-4"><input type="radio" name="question6" id="question6-4" value="1">Maybe yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question6-5"><input type="radio" name="question6" id="question6-5" value="2">Probably yes</label>
+				</div>
+				<div class="radio">
+					<label class="radio" for="question6-6"><input type="radio" name="question6" id="question6-6" value="3">Definitely yes</label>
+				</div>
+			</div>
+        </div>
+
+
+
+
+
+
+
+
+
+<!-- 		<div>
 			<p id="question-wrapperA">Do you think this one <span id="question1">{{}}</span>?</p>
 			<p id="question-wrapperB">Do you think this one <span id="question2">{{}}</span>?</p>
 			<p id="question-wrapperB">Do you think this one <span id="question3">{{}}</span>?</p>
@@ -128,7 +298,7 @@
 					</tr>
 				</tbody>
 			</table>
-		</div>
+		</div> -->
 
    	</div>
 
