reorganize alt files, make them work

--- a/experiment/experiment_alt.html
+++ b/experiment/experiment_alt.html
@@ -8,7 +8,7 @@
       <script src="dependencies/mmturkey.js"></script>
       <!-- note: add uniqueturker here -->
       <link href="dependencies/bootstrap.min.css" rel="stylesheet">
-      <link href="style.css" rel="stylesheet"/>
+      <link href="style_alt.css" rel="stylesheet"/>
 	</head>
 
   <body>
@@ -112,7 +112,7 @@
     <script src="helper.js"></script>
     <script src="swatches.js"></script>
     <script src="conditions.js"></script>
-    <script src="experiment.js"></script>
+    <script src="experiment_alt.js"></script>
     <script src="preload.js"></script>
     <script src="tracker.js"></script>
 
