--- a/experiment/experiment_alt.html
+++ b/experiment/experiment_alt.html
@@ -111,7 +111,7 @@
     <!-- my experiment -->
     <script src="helper.js"></script>
     <script src="swatches.js"></script>
-    <script src="conditions.js"></script>
+    <script src="conditions_alt.js"></script>
     <script src="experiment_alt.js"></script>
     <script src="preload.js"></script>
     <script src="tracker.js"></script>
