--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -80,6 +80,8 @@
 
   <div class="slide" id="stage">
 
+    <p class="progress-text">{{}}</p>
+
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
