--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -32,7 +32,7 @@
       <h1 id='title-text'>Stanford University Department of Psychology</h1>
       
       <p class="fun-text">Thank you for participating in our study!</p>
-      <p class="subtitle">It should take you about 5-8 minutes to complete.<br>Click the "Start" button to begin.</p>
+      <p class="subtitle">It should take you about 6-8 minutes to complete.<br>Click the "Start" button to begin.</p>
       
       <br />
       <div class="button" id="start">
@@ -49,7 +49,7 @@
       <b>PROTOCOL EXPIRATION DATE</b>: December 20, 2016<br /></p>
       <p class="legal" id="legal"><b>DESCRIPTION</b>:<br />
       You are invited to participate in a research study on the basic foundations of social reasoning. We are interested in how children and adults reason about the social and physical world, and how basic concepts of sentience and animacy might relate to more complex kinds of social cognition (such as social interaction or moral evaluation). During this study, you may be exposed to sentences about the properties or capacities of unfamiliar objects (e.g., "This one is blue"; "This one can sing"), and/or or unfamiliar objects (or pictures or short video clips featuring unfamiliar objects), such as an unusual artifact. You may be asked to respond to questions about the stories or objects (e.g., "Do you think this one can jump up and down?"; "Please describe this object").</p>
-      <p class="legal" id="legal"><b>TIME INVOLVEMENT</b>: Your participation in this experiment will take approximately 5-8 minutes.</p>
+      <p class="legal" id="legal"><b>TIME INVOLVEMENT</b>: Your participation in this experiment will take approximately 6-8 minutes.</p>
       <p class="legal" id="legal"><b>RISKS AND BENEFITS</b>: There are no foreseeable risks or benefits associated with participating in this study. We cannot and do not guarantee or promise that you will receive any benefits from this study.</p>
       <p class="legal" id="legal"><b>PAYMENTS</b>: You will receive reimbursement as described in the posting for this study as payment for your participation.
       <p class="legal" id="legal"><b>SUBJECT'S RIGHTS</b>: If you have read this form and have decided to participate in this project, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. The alternative is not to participate. You have the right to refuse to answer particular questions. The results of this research study may be presented at scientific or professional meetings or published in scientific journals. Your individual privacy will be maintained in all published and written data resulting from the study.</p>
@@ -313,8 +313,8 @@
     <script src="dependencies/bootstrap.min.js"></script>
 
     <!-- fingerprinting -->
-    <!-- <script src="dependencies/store.js"></script> -->
-    <!-- <script src="dependencies/fingerprint.js"></script> -->
+    <script src="dependencies/store.js"></script>
+    <script src="dependencies/fingerprint.js"></script>
 
   </body>
 
