--- a/experiment/preview.html
+++ b/experiment/preview.html
@@ -6,10 +6,10 @@
     <title>Picture Survey</title>
     <script src="dependencies/jquery-2.1.3.min.js"></script>
     <script src="dependencies/mmturkey.js"></script>
-    <!-- <script src="dependencies/uniqueturker-lib.js" type="text/javascript"></script> -->
+    <script src="dependencies/uniqueturker-lib.js" type="text/javascript"></script>
     <link href="dependencies/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet"/>
-    </head>
+  </head>
 
   <body>
 
