try to fix submission problem

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -5,8 +5,8 @@
   <head>
       <title>Picture Survey</title>
       <script src="dependencies/jquery-2.1.3.min.js"></script>
+      <script src="scripts/helper.js"></script>
       <script src="dependencies/mmturkey.js"></script>
-      <!-- note: add uniqueturker here -->
       <link href="dependencies/bootstrap.min.css" rel="stylesheet">
       <link href="style.css" rel="stylesheet"/>
 	</head>
@@ -68,7 +68,7 @@
 
       <p class="survey-descrip"><b>Please respond with your opinion or intuition.</b></p>
 
-      <p class="survey-descrip">First, we will ask you to judge how likely each photograph is to be an animal.  Then, we will ask you a few more questions about the photographs.</p>
+      <p class="survey-descrip">On each trial, we will ask you one question about the photograph displayed. At the end of the session, we will ask you a few questions about your background.</p>
 
       <div class="button" id="form">
         <button type="submit" class="btn btn-default">Next</button>
