fix data submission problems

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -5,7 +5,7 @@
   <head>
       <title>Picture Survey</title>
       <script src="dependencies/jquery-2.1.3.min.js"></script>
-      <script src="scripts/helper.js"></script>
+      <script src="helper.js"></script>
       <script src="dependencies/mmturkey.js"></script>
       <link href="dependencies/bootstrap.min.css" rel="stylesheet">
       <link href="style.css" rel="stylesheet"/>
@@ -284,11 +284,11 @@
             <textarea class="form-control" rows="3" id="comments" name="comments"></textarea>
           </div>
         </div>
+      </form>
 
         <div class="button">
           <button type="submit" class="btn btn-default">Submit</button>
         </div>
-      </form>
     
     </div>
 
@@ -302,10 +302,10 @@
 <!-- include javascript files -->
 
     <!-- my experiment -->
-    <script src="helper.js"></script>
     <script src="swatches.js"></script>
     <script src="conditions.js"></script>
     <script src="experiment.js"></script>
+    <script src="demographics.js"></script>
     <script src="preload.js"></script>
     <script src="tracker.js"></script>
 
