fix coding of english as native language

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -263,16 +263,16 @@
               <label class="radio" for="englishNative-1"><input type="radio" name="englishNative" id="englishNative-1" value="yes_multiple">English is one of <b>multiple</b> native languages for me.</label>
             </div>
             <div class="radio">
-              <label class="radio" for="englishNative-2"><input type="radio" name="englishNative" id="englishNative-2" value="no">English is <b>not</b> my native language, but I read and write in English fluently.</label>
+              <label class="radio" for="englishNative-2"><input type="radio" name="englishNative" id="englishNative-2" value="no_fluent">English is <b>not</b> my native language, but I read and write in English fluently.</label>
             </div>
             <div class="radio">
-              <label class="radio" for="englishNative-3"><input type="radio" name="englishNative" id="englishNative-3" value="no">English is <b>not</b> my native language, but I read and write in English moderately well.</label>
+              <label class="radio" for="englishNative-3"><input type="radio" name="englishNative" id="englishNative-3" value="no_moderatelywell">English is <b>not</b> my native language, but I read and write in English moderately well.</label>
             </div>
             <div class="radio">
-              <label class="radio" for="englishNative-4"><input type="radio" name="englishNative" id="englishNative-4" value="no">English is <b>not</b> my native language, but I read and write in English somewhat well.</label>
+              <label class="radio" for="englishNative-4"><input type="radio" name="englishNative" id="englishNative-4" value="no_somewhatwell">English is <b>not</b> my native language, but I read and write in English somewhat well.</label>
             </div>
             <div class="radio">
-              <label class="radio" for="englishNative-5"><input type="radio" name="englishNative" id="englishNative-5" value="no">English is <b>not</b> my native language, and reading and writing in English is somewhat difficult for me.</label>
+              <label class="radio" for="englishNative-5"><input type="radio" name="englishNative" id="englishNative-5" value="no_difficult">English is <b>not</b> my native language, and reading and writing in English is somewhat difficult for me.</label>
             </div>
           </div>
         </div>      
