--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -70,10 +70,12 @@
 
       	<div class="control-group">
           <div class="controls">
-          	<p class="survey-descrip">To make sure that you understand what we are asking you to think about, please restate the following sentence in your own words: <b>"I think that this one <span id="question-text">{{}}</span>"</b>:</p>
-            <textarea class="form-control" rows="1" id="restate" name="restate" style="width:80%;margin:10px auto 20px auto"></textarea>
+          	<p class="survey-descrip">To make sure that you understand what we are asking you to consider, please restate the following sentence in your own words: <b>"I think that this one <span id="question-text">{{}}</span>"</b>:</p>
+            <textarea class="form-control" rows="1" id="comprehensionCheck" name="comprehensionCheck" style="width:80%;margin:10px auto 20px auto"></textarea>
           </div>
         </div>
+
+      <p class="survey-descrip" style="text-align:center; font-weight:bold;">If you are unclear about any of these instructions, please return this HIT. Thank you!</p>
 
       <div class="button" id="form">
         <button type="submit" class="btn btn-default">Next</button>
@@ -310,6 +312,7 @@
     <script src="swatches.js"></script>
     <script src="conditions.js"></script>
     <script src="experiment.js"></script>
+    <script src="compcheck.js"></script>
     <script src="demographics.js"></script>
     <script src="preload.js"></script>
     <script src="tracker.js"></script>
