require restatement in own words

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -70,12 +70,12 @@
 
       	<div class="control-group">
           <div class="controls">
-          	<p class="survey-descrip">To make sure that you understand what we are asking you to consider, please restate the following sentence in your own words: <b>"I think that this one <span id="question-text">{{}}</span>"</b>:</p>
+          	<p class="survey-descrip">To make sure that you understand what we are asking you to consider, please restate the following sentence in your own words: <b>"I think that this one <span id="question-text">{{}}</span>."</b></p>
             <textarea class="form-control" rows="1" id="comprehensionCheck" name="comprehensionCheck" style="width:80%;margin:10px auto 20px auto"></textarea>
           </div>
         </div>
 
-      <p class="survey-descrip" style="text-align:center; font-weight:bold;">If you are unclear about any of these instructions, please return this HIT. Thank you!</p>
+      <p class="survey-descrip">Please make sure to restate the sentence in your own words. If your answer does not reflect genuine effort, we will not be able to approve your work. If you are unclear about any of these instructions, please return this HIT. Thank you very much!</p>
 
       <div class="button" id="form">
         <button type="submit" class="btn btn-default">Next</button>
