fix encoding of other/prefno for education

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -171,7 +171,7 @@
               <label class="radio" for="education-7"><input type="radio" name="education" id="education-7" value="grad_degree">Graduate or professional degree (e.g., MA, MS, PhD, MD, JD)</label>
             </div>
             <div class="radio">
-              <label class="radio" for="education-8"><input type="radio" name="education" id="education-8" value="grad_degree">Other/prefer not to say</label>
+              <label class="radio" for="education-8"><input type="radio" name="education" id="education-8" value="other_prefNo">Other/prefer not to say</label>
             </div>
           </div>
         </div>
