style instructions/comprehension check

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -64,7 +64,7 @@
       
       <h1 id='title-text'>Picture Survey</h1>
       
-      <p class="survey-descrip">In this study, you will respond to questions about a series of "zoomed in," close-up pictures. We are interested in your personal judgments of these pictures. Please do not attempt to look these pictures up online - this will make the task take longer than expected!</p>
+      <p class="survey-descrip">In this study, you will be asked to respond to questions about a series of "zoomed in," close-up pictures. We are interested in your personal judgments of these pictures. Please do not attempt to look these pictures up online - this will make the task take longer than expected!</p>
 
       <p class="survey-descrip">On each trial, you will see a close-up picture of something, and you will be asked to judge <b>whether or not that thing <span id="question-text">{{}}</span></b>.</p>
 
@@ -75,7 +75,9 @@
           </div>
         </div>
 
-      <p class="survey-descrip">Please make sure to restate the sentence in your own words. If your answer does not reflect genuine effort, we will not be able to approve your work. If you are unclear about any of these instructions, please return this HIT. Thank you very much!</p>
+      <p class="survey-descrip">Please make sure to restate the sentence in your own words. If your answer does not reflect genuine effort, we will not be able to approve your work on this HIT.</p>
+
+      <p class="fun-text" style="width:80%;"><b>If you are unclear about any of these instructions, please return this HIT. Thank you very much!</b></p>
 
       <div class="button" id="form">
         <button type="submit" class="btn btn-default">Next</button>
