correct encoding of gender

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -140,7 +140,7 @@
               <label class="radio" for="gender-1"><input type="radio" name="gender" id="gender-1" value="male">Male</label>
             </div>
             <div class="radio">
-              <label class="radio" for="gender-2"><input type="radio" name="gender" id="gender-2" value="male">Other/prefer not to say</label>
+              <label class="radio" for="gender-2"><input type="radio" name="gender" id="gender-2" value="other_prefNo">Other/prefer not to say</label>
             </div>
           </div>
         </div>
